kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hk-django
  labels:
    app: django-hardeep
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: django-hardeep
  template:
    metadata:
      labels:
        app: django-hardeep
    spec:
      containers:
      - name: hk-container
        image: hk-new-django:3.0
        ports:
        - containerPort: 8000
