kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hk-service
spec:
  type: NodePort
  selector:
    app: django-hardeep
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 31500
